# cpp-calculator

./: CMakeLists.txt
src/: calculator.cpp  calculator.h  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  calculator_test.cpp
